BusOne/src/objects/BOT_Speciality_Thera_JO__c.object
<CustomObject>
    <description>It is a junction object between Specialty Provider and Thera class objects</description>
    <fields>
        <fullName>Account_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>It is a lookup relationship to Account</description>
        <label>Account ID</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Speciality Thera JOs</relationshipLabel>
        <relationshipName>Account_ID</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BOT_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>It is lookup to Account object</description>
        <label>Account Summary</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account</relationshipLabel>
        <relationshipName>Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BOT_Specialty_Provider__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Useed to store the related specialty provider</description>
        <label>Specialty Provider</label>
        <referenceTo>BOT_Specialty_Provider__c</referenceTo>
        <relationshipLabel>Thera Class</relationshipLabel>
        <relationshipName>Speciality_Thera_JOs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BOT_Thera_Class__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used ot store the master thera class Id</description>
        <label>Thera Class</label>
        <referenceTo>BOT_Thera_Class__c</referenceTo>
        <relationshipLabel>Speciality Providers</relationshipLabel>
        <relationshipName>Speciality_Thera_JOs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Speciality Thera JO</label>
    <nameField>
        <displayFormat>ST-{00000000}</displayFormat>
        <label>Speciality There JO Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Speciality Thera JOs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>